k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grupo-1-1
  namespace: arriendatufinca
spec:
  selector:
    matchLabels:
      app: grupo-1-1
  replicas: 1
  template:
    metadata:
      labels:
        app: grupo-1-1
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: grupo-1-1
          image: localhost:5000/grupo-1-1:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grupo-1-1
  namespace: arriendatufinca
spec:
  #  type: NodePort
  selector:
    app: grupo-arriendatufinca-1
  ports:
    - protocol: TCP
      port: 8080
      #      nodePort: 30001
      targetPort: 8080
