k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grupo-1-1
  namespace: thymeleaf
spec:
  ingressClassName: public
  rules:
    - host: gruposjaveriana.dynaco.co
      http:
        paths:
          - path: /grupo-1-1
            pathType: Prefix
            backend:
              service:
                name: grupo-1-1
                port:
                  number: 8080
